frontend/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: perkasm
  labels:
    name: perkasm
    environment: production
    app: perkasm-platform
