frontend/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: perkasm-frontend
  namespace: perkasm
  labels:
    app: perkasm-frontend
    component: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: perkasm-frontend
    component: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: https
    protocol: TCP
    port: 443
    targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: perkasm-frontend-headless
  namespace: perkasm
  labels:
    app: perkasm-frontend
    component: frontend
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app: perkasm-frontend
    component: frontend
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
